# griffin-tele

./: .gitignore  CAMERA_SETUP.md  README.md  hello.py  pyproject.toml  setup.sh  test_orbbec.py  test_piper_minimal.py  test_pyorbbecsdk.py  windows_camera_server.py
Log/: OrbbecSDK.log.txt
src/: __init__.py  arm_visualizer.py  camera.py  camera_capture.py  depth_processor.py  gripper_controller.py  inverse_kinematics.py  pose_estimation.py  robot_interface.py  robot_pov_visualizer.py  s101_interface.py  s101_kinematics.py  teleop.py  workspace_mapping.py
test/: test_ik_debug.py  test_ik_reachability.py  test_new_workspace.py  test_orientation_mapping.py  test_robot_reach.py  test_s101.py
