[project]
name = "griffin-tele"
version = "0.1.0"
description = "Camera-based teleoperation for robot arms (Piper, SO-101/LeRobot)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ikpy>=3.3.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.0",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0",
    "pandas>=2.3.3",
    "pyserial>=3.5",  # For S101/Feetech servo communication
]

[project.scripts]
griffin-teleop = "src.teleop:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
